# LEGAL-SERVER

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GITHUB_SETUP_GUIDE.md  LICENSE  README.md
.github/workflows/: ci.yml
config/: dev.json
include/handlers/: RequestHandler.h
include/server/: Config.h  HttpServer.h
include/services/: LegalService.h  MLInferenceService.h
include/utils/: logger.h
scripts/: install-deps.sh
src/: main.cpp
src/handlers/: RequestHandler.cpp
src/server/: Config.cpp  HttpServer.cpp
src/services/: LegalService.cpp  MLInferenceService.cpp
src/utils/: logger.cpp
